# ChangeLog for x11-misc/hsetroot
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/hsetroot/ChangeLog,v 1.6 2006/01/13 13:37:23 nelchael Exp $

  13 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> hsetroot-1.0.2.ebuild:
  Fixed DEPEND for modular X.

  30 Jul 2005; Simon Stelling <blubb@gentoo.org> hsetroot-1.0.2.ebuild:
  added ~amd64 keyword

  26 Jul 2005; David Holm <dholm@gentoo.org> hsetroot-1.0.2.ebuild:
  Added to ~ppc.

  06 May 2005; Sven Wegener <swegener@gentoo.org> hsetroot-1.0.2.ebuild:
  Removed * postfix from <, <=, >= and > dependencies.

  05 Dec 2004; Sven Wegener <swegener@gentoo.org> hsetroot-1.0.2.ebuild:
  Fixed invalid atoms in *DEPEND. Added missing DESCRIPTION to ebuild.

*hsetroot-1.0.2 (05 Dec 2004)

  05 Dec 2004; <pyrania@gentoo.org> +metadata.xml, +hsetroot-1.0.2.ebuild:
  Initial import.
