@@ -1,4 +1,4 @@
 DIST hsetroot-1.0.2.tar.gz 125535 RMD160 0aadf0308ec0068525babca338a35cc3899c1dc9 SHA1 a39e0fff11eb17e5432761aabcd8b68242210bb5 SHA256 d6712d330b31122c077bfc712ec4e213abe1fe71ab24b9150ae2774ca3154fd7
-EBUILD hsetroot-1.0.2.ebuild 706 RMD160 41c6a9461a066efba3611ab60278d9b08e96142b SHA1 fb1b723a04ff9ada3729b78125971b5bd81028b0 SHA256 dc1012f5a79d05db1c2886a7c8a222ec467e87bc04601786830a9b069ecf44d7
-MISC ChangeLog 897 RMD160 1dd3f867cebe2c7839f1a293fbd5a70cf80ce4dc SHA1 a5f4d7ecf55c8793f6c44d6b1f0684f6bd2660f9 SHA256 4a83c99fe03f6d13aadc1da2b9feee14e3f1dcf68b60d624536ad01caaef3754
+EBUILD hsetroot-1.0.2.ebuild 706 RMD160 3262f5e709e06d5b4f070c1a2d5b6750db5f20c3 SHA1 635eb0a2f4778a6a5a3afe5df9e4ac70e0ad4973 SHA256 49cc3d27b34838e8f370d5fda48a48093cab3f72ef719322cb3b4dafdff66cdd
+MISC ChangeLog 994 RMD160 31d16a962469b9879bd15ca576bb8344533ea00b SHA1 f9a13bf7402a1580199bf2ad267e40a3765238fb SHA256 d1e22297330b637a959ce5003ce37f2bfc03301f6b59b377f4b8b1f4489dd2d2
 MISC metadata.xml 1083 RMD160 bb188a7e643ac9b7d4d22eb7a9370b3330f34b4b SHA1 e80ed3d0424d25205fae66c3aa765a4cbb25d261 SHA256 5ffaa17bfcd4767c3acc094c03f000a12b1186252bbe126e80e5f4e7c3b98ef2
